// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal render correctly 1`] = `
<div>
  <div
    class="ant-scrolling-effect"
    style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
  >
    <div>
      <div
        class="ant-modal-root"
      >
        <div
          class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
        />
        <div
          class="ant-modal-wrap"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="ant-modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
            role="document"
            style="width: 520px;"
          >
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  class="ant-modal-close-x"
                >
                  <span
                    aria-label="SelectorClose"
                    class="anticon anticon-SelectorClose ant-modal-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="SelectorClose"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M12.53 4.53a.75.75 0 00-1.06-1.06L8 6.94 4.53 3.47a.75.75 0 00-1.06 1.06L6.94 8l-3.47 3.47a.75.75 0 101.06 1.06L8 9.06l3.47 3.47a.75.75 0 101.06-1.06L9.06 8l3.47-3.47z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-body"
              >
                Here is content of Modal
              </div>
              <div
                class="ant-modal-footer"
              >
                <button
                  class="ant-btn"
                  type="button"
                >
                  <span>
                    Cancel
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    OK
                  </span>
                </button>
              </div>
            </div>
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal render without footer 1`] = `
<div>
  <div
    class="ant-scrolling-effect"
    style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
  >
    <div>
      <div
        class="ant-modal-root"
      >
        <div
          class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
        />
        <div
          class="ant-modal-wrap"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="ant-modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
            role="document"
            style="width: 520px;"
          >
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  class="ant-modal-close-x"
                >
                  <span
                    aria-label="SelectorClose"
                    class="anticon anticon-SelectorClose ant-modal-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="SelectorClose"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 16 16"
                      width="1em"
                    >
                      <path
                        d="M12.53 4.53a.75.75 0 00-1.06-1.06L8 6.94 4.53 3.47a.75.75 0 00-1.06 1.06L6.94 8l-3.47 3.47a.75.75 0 101.06 1.06L8 9.06l3.47 3.47a.75.75 0 101.06-1.06L9.06 8l3.47-3.47z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-body"
              >
                Here is content of Modal
              </div>
            </div>
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal rtl render component should be rendered correctly in RTL direction 1`] = `null`;

exports[`Modal support closeIcon 1`] = `
<div
  class="ant-modal-root"
>
  <div
    class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
  />
  <div
    class="ant-modal-wrap"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="ant-modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
      role="document"
      style="width: 520px;"
    >
      <div
        aria-hidden="true"
        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
        tabindex="0"
      />
      <div
        class="ant-modal-content"
      >
        <button
          aria-label="Close"
          class="ant-modal-close"
          type="button"
        >
          <span
            class="ant-modal-close-x"
          >
            <a>
              closeIcon
            </a>
          </span>
        </button>
        <div
          class="ant-modal-body"
        />
        <div
          class="ant-modal-footer"
        >
          <button
            class="ant-btn"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="ant-btn ant-btn-primary"
            type="button"
          >
            <span>
              OK
            </span>
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;
